ucxclient-wrapper/ucxclient_wrapper_generated.h

/* Forward declaration */
typedef struct ucx_instance ucx_instance_t;
/* ========== BLUETOOTH FUNCTIONS ========== */
int32_t ucx_bluetooth_SetMode(ucx_instance_t *inst, uBtMode_t mode);
int32_t ucx_bluetooth_GetMode(ucx_instance_t *inst, uBtMode_t * pMode);
int32_t ucx_bluetooth_Connect(ucx_instance_t *inst, uBtLeAddress_t * bd_addr);
int32_t ucx_bluetooth_Disconnect(ucx_instance_t *inst, int32_t conn_handle);
bool ucx_bluetooth_GetLocalNameBegin(ucx_instance_t *inst, const char * * ppDeviceName);
int32_t ucx_bluetooth_SetLocalName(ucx_instance_t *inst, const char * device_name);
void ucx_bluetooth_DiscoveryDefaultBegin(ucx_instance_t *inst);
bool ucx_bluetooth_DiscoveryDefaultGetNext(ucx_instance_t *inst, uCxBtDiscoveryDefault_t * pBtDiscoveryDefaultRsp);
void ucx_bluetooth_Discovery1Begin(ucx_instance_t *inst, uBtDiscoveryType_t discovery_type);
bool ucx_bluetooth_Discovery1GetNext(ucx_instance_t *inst, uCxBtDiscovery_t * pBtDiscoveryRsp);
void ucx_bluetooth_Discovery2Begin(ucx_instance_t *inst, uBtDiscoveryType_t discovery_type, uBtDiscoveryMode_t discovery_mode);
bool ucx_bluetooth_Discovery2GetNext(ucx_instance_t *inst, uCxBtDiscovery_t * pBtDiscoveryRsp);
void ucx_bluetooth_Discovery3Begin(ucx_instance_t *inst, uBtDiscoveryType_t discovery_type, uBtDiscoveryMode_t discovery_mode, int32_t discovery_length);
bool ucx_bluetooth_Discovery3GetNext(ucx_instance_t *inst, uCxBtDiscovery_t * pBtDiscoveryRsp);
int32_t ucx_bluetooth_BgDiscoveryDefaultStart(ucx_instance_t *inst);
int32_t ucx_bluetooth_BgDiscoveryStart1(ucx_instance_t *inst, uBtDiscoveryType_t discovery_type);
int32_t ucx_bluetooth_BgDiscoveryStart2(ucx_instance_t *inst, uBtDiscoveryType_t discovery_type, uBtDiscoveryMode_t discovery_mode);
int32_t ucx_bluetooth_BgDiscoveryStart3(ucx_instance_t *inst, uBtDiscoveryType_t discovery_type, uBtDiscoveryMode_t discovery_mode, uBtOutputEvents_t output_events);
int32_t ucx_bluetooth_BgDiscoveryStop(ucx_instance_t *inst);
int32_t ucx_bluetooth_GetRssi(ucx_instance_t *inst, int32_t conn_handle, int32_t * pRssi);
void ucx_bluetooth_ListConnectionsBegin(ucx_instance_t *inst);
bool ucx_bluetooth_ListConnectionsGetNext(ucx_instance_t *inst, uCxBtListConnections_t * pBtListConnectionsRsp);
void ucx_bluetooth_ListConnectionStatusBegin(ucx_instance_t *inst, int32_t conn_handle);
bool ucx_bluetooth_ListConnectionStatusGetNext(ucx_instance_t *inst, uCxBtListConnectionStatus_t * pBtListConnectionStatusRsp);
int32_t ucx_bluetooth_GetConnectionStatus(ucx_instance_t *inst, int32_t conn_handle, uBtPropId_t prop_id, int32_t * pStatusVal);
int32_t ucx_bluetooth_GetAdvertiseInformation(ucx_instance_t *inst, uCxBtGetAdvertiseInformation_t * pBtGetAdvertiseInformationRsp);
int32_t ucx_bluetooth_SetLegacyAdvertiseData(ucx_instance_t *inst, const uint8_t * adv_data, int32_t adv_data_len);
bool ucx_bluetooth_GetLegacyAdvertiseDataBegin(ucx_instance_t *inst, uByteArray_t * pAdvData);
int32_t ucx_bluetooth_ClearLegacyAdvertiseData(ucx_instance_t *inst);
int32_t ucx_bluetooth_SetScanResponseData(ucx_instance_t *inst, const uint8_t * scan_rsp_data, int32_t scan_rsp_data_len);
bool ucx_bluetooth_GetScanResponseDataBegin(ucx_instance_t *inst, uByteArray_t * pScanRspData);
int32_t ucx_bluetooth_ClearScanResponseData(ucx_instance_t *inst);
int32_t ucx_bluetooth_LegacyAdvertisementStart(ucx_instance_t *inst);
int32_t ucx_bluetooth_LegacyAdvertisementStop(ucx_instance_t *inst);
int32_t ucx_bluetooth_DirectedAdvertisementStart1(ucx_instance_t *inst, uBtLeAddress_t * bd_addr);
int32_t ucx_bluetooth_DirectedAdvertisementStart2(ucx_instance_t *inst, uBtLeAddress_t * bd_addr, int32_t timeout);
int32_t ucx_bluetooth_DirectedAdvertisementStop(ucx_instance_t *inst);
int32_t ucx_bluetooth_SetConnectionIntervalMin(ucx_instance_t *inst, int32_t connection_interval_minimum);
int32_t ucx_bluetooth_GetConnectionIntervalMin(ucx_instance_t *inst, int32_t * pConnectionIntervalMinimum);
int32_t ucx_bluetooth_SetConnectionIntervalMax(ucx_instance_t *inst, int32_t connection_interval_maximum);
int32_t ucx_bluetooth_GetConnectionIntervalMax(ucx_instance_t *inst, int32_t * pConnectionIntervalMaximum);
int32_t ucx_bluetooth_SetConnectionPeripheralLatency(ucx_instance_t *inst, int32_t connection_peripheral_latency);
int32_t ucx_bluetooth_GetConnectionPeripheralLatency(ucx_instance_t *inst, int32_t * pConnectionPeripheralLatency);
int32_t ucx_bluetooth_SetConnectionLinklossTimeout(ucx_instance_t *inst, int32_t connection_linkloss_timeout);
int32_t ucx_bluetooth_GetConnectionLinklossTimeout(ucx_instance_t *inst, int32_t * pConnectionLinklossTimeout);
int32_t ucx_bluetooth_SetPreferredTxPhy(ucx_instance_t *inst, int32_t preferred_tx_phy);
int32_t ucx_bluetooth_GetPreferredTxPhy(ucx_instance_t *inst, int32_t * pPreferredTxPhy);
int32_t ucx_bluetooth_SetPreferredRxPhy(ucx_instance_t *inst, int32_t preferred_rx_phy);
int32_t ucx_bluetooth_GetPreferredRxPhy(ucx_instance_t *inst, int32_t * pPreferredRxPhy);
int32_t ucx_bluetooth_SetLegacyAdvertisementConfig(ucx_instance_t *inst, int32_t advertisement_interval_minimum, int32_t advertisement_interval_maximum);
int32_t ucx_bluetooth_GetLegacyAdvertisementConfig(ucx_instance_t *inst, uCxBtGetLegacyAdvertisementConfig_t * pBtGetLegacyAdvertisementConfigRsp);
int32_t ucx_bluetooth_SetScanInterval(ucx_instance_t *inst, int32_t scan_interval);
int32_t ucx_bluetooth_GetScanInterval(ucx_instance_t *inst, int32_t * pScanInterval);
int32_t ucx_bluetooth_SetScanWindow(ucx_instance_t *inst, int32_t scan_window);
int32_t ucx_bluetooth_GetScanWindow(ucx_instance_t *inst, int32_t * pScanWindow);
int32_t ucx_bluetooth_SetConnectToDirectedAdv(ucx_instance_t *inst, int32_t connect_to_directed_adv);
int32_t ucx_bluetooth_GetConnectToDirectedAdv(ucx_instance_t *inst, int32_t * pConnectToDirectedAdv);
int32_t ucx_bluetooth_SetIoCapabilities(ucx_instance_t *inst, uBtIoCap_t io_cap);
int32_t ucx_bluetooth_GetIoCapabilities(ucx_instance_t *inst, uBtIoCap_t * pIoCap);
int32_t ucx_bluetooth_SetSecurityMode(ucx_instance_t *inst, uBtSecurityMode_t security_mode);
int32_t ucx_bluetooth_GetSecurityMode(ucx_instance_t *inst, uBtSecurityMode_t * pSecurityMode);
int32_t ucx_bluetooth_SetPairingMode(ucx_instance_t *inst, uBtPairingMode_t pairing_mode);