ucx-avalonia-app/Services/UcxNativeGenerated.cs

// Auto-generated UCX API wrapper P/Invoke declarations
// DO NOT EDIT - Generated by generate_wrapper.py

using System;
using System.Runtime.InteropServices;
using System.Text;

namespace UcxAvaloniaApp.Services
{
    public static partial class UcxNativeGenerated
    {
        private const string DllName = "ucxclient_wrapper";

        #region BLUETOOTH Functions

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetMode(IntPtr instance, int mode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetMode(IntPtr instance, out int pMode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_Connect(IntPtr instance, out int bd_addr);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_Disconnect(IntPtr instance, int conn_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_GetLocalNameBegin(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string ppDeviceName);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetLocalName(IntPtr instance, [MarshalAs(UnmanagedType.LPStr)] string device_name);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_DiscoveryDefaultBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_DiscoveryDefaultGetNext(IntPtr instance, out int pBtDiscoveryDefaultRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_Discovery1Begin(IntPtr instance, int discovery_type);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_Discovery1GetNext(IntPtr instance, out int pBtDiscoveryRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_Discovery2Begin(IntPtr instance, int discovery_type, int discovery_mode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_Discovery2GetNext(IntPtr instance, out int pBtDiscoveryRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_Discovery3Begin(IntPtr instance, int discovery_type, int discovery_mode, int discovery_length);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_Discovery3GetNext(IntPtr instance, out int pBtDiscoveryRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_BgDiscoveryDefaultStart(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_BgDiscoveryStart1(IntPtr instance, int discovery_type);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_BgDiscoveryStart2(IntPtr instance, int discovery_type, int discovery_mode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_BgDiscoveryStart3(IntPtr instance, int discovery_type, int discovery_mode, int output_events);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_BgDiscoveryStop(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetRssi(IntPtr instance, int conn_handle, out int pRssi);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_ListConnectionsBegin(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_ListConnectionsGetNext(IntPtr instance, out int pBtListConnectionsRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_bluetooth_ListConnectionStatusBegin(IntPtr instance, int conn_handle);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_ListConnectionStatusGetNext(IntPtr instance, out int pBtListConnectionStatusRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetConnectionStatus(IntPtr instance, int conn_handle, int prop_id, out int pStatusVal);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetAdvertiseInformation(IntPtr instance, out int pBtGetAdvertiseInformationRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetLegacyAdvertiseData(IntPtr instance, IntPtr adv_data, int adv_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_GetLegacyAdvertiseDataBegin(IntPtr instance, out int pAdvData);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_ClearLegacyAdvertiseData(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetScanResponseData(IntPtr instance, IntPtr scan_rsp_data, int scan_rsp_data_len);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern bool ucx_bluetooth_GetScanResponseDataBegin(IntPtr instance, out int pScanRspData);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_ClearScanResponseData(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_LegacyAdvertisementStart(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_LegacyAdvertisementStop(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_DirectedAdvertisementStart1(IntPtr instance, out int bd_addr);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_DirectedAdvertisementStart2(IntPtr instance, out int bd_addr, int timeout);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_DirectedAdvertisementStop(IntPtr instance);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetConnectionIntervalMin(IntPtr instance, int connection_interval_minimum);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetConnectionIntervalMin(IntPtr instance, out int pConnectionIntervalMinimum);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetConnectionIntervalMax(IntPtr instance, int connection_interval_maximum);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetConnectionIntervalMax(IntPtr instance, out int pConnectionIntervalMaximum);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetConnectionPeripheralLatency(IntPtr instance, int connection_peripheral_latency);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetConnectionPeripheralLatency(IntPtr instance, out int pConnectionPeripheralLatency);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetConnectionLinklossTimeout(IntPtr instance, int connection_linkloss_timeout);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetConnectionLinklossTimeout(IntPtr instance, out int pConnectionLinklossTimeout);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetPreferredTxPhy(IntPtr instance, int preferred_tx_phy);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetPreferredTxPhy(IntPtr instance, out int pPreferredTxPhy);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetPreferredRxPhy(IntPtr instance, int preferred_rx_phy);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetPreferredRxPhy(IntPtr instance, out int pPreferredRxPhy);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetLegacyAdvertisementConfig(IntPtr instance, int advertisement_interval_minimum, int advertisement_interval_maximum);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetLegacyAdvertisementConfig(IntPtr instance, out int pBtGetLegacyAdvertisementConfigRsp);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetScanInterval(IntPtr instance, int scan_interval);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetScanInterval(IntPtr instance, out int pScanInterval);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetScanWindow(IntPtr instance, int scan_window);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetScanWindow(IntPtr instance, out int pScanWindow);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetConnectToDirectedAdv(IntPtr instance, int connect_to_directed_adv);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetConnectToDirectedAdv(IntPtr instance, out int pConnectToDirectedAdv);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetIoCapabilities(IntPtr instance, int io_cap);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetIoCapabilities(IntPtr instance, out int pIoCap);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetSecurityMode(IntPtr instance, int security_mode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_GetSecurityMode(IntPtr instance, out int pSecurityMode);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int ucx_bluetooth_SetPairingMode(IntPtr instance, int pairing_mode);
